# anaximander

./: .gitignore  README.md  pyproject.toml
anaximander/: __init__.py
anaximander/dataobjects/: __init__.py  base.py  collections.py  columnar.py  data.py  models.py  tabular.py
anaximander/descriptors/: __init__.py  attributes.py  base.py  dataspec.py  datatypes.py  fields.py  fieldtypes.py  methods.py  schema.py  scope.py  typespec.py
anaximander/meta/: __init__.py  arche.py  archetype.py  nxmeta.py  nxobject.py  nxtype.py  trait.py
anaximander/operators/: __init__.py
anaximander/utilities/: functions.py  nxdataclasses.py  nxyaml.py
documentation/: Mockups.md
scripts/: app.py  arcbase.py  basic.py  batch_temp.py  bytewax_exp1.py  csv_to_pubsub.py  dataobjxp.py  demo.py  flow.py  hello_world.py  linefeeder.sh  models.py  nxslides.py  sessionize.py  streaming_wordcount.py  streaming_wordcount_mod.py  temp_processor.py  temp_processor_df.py  temp_processor_df_example.py  words.txt
scripts/archive/: attr_experiments.py  dataclass_experiment.py  marshmallow-assessment.py  marshmallow-tables.py  meta_testing.py  mymodule.py  mymodule.pyi  mytypes.py  mytypes.pyi  record-experiment.py
tests/: conftest.py
tests/data/: POC Data - 2023-12-18.csv
tests/units/dataobjects/: conftest.py  test_base.py  test_columnar.py  test_data.py  test_models.py  test_tabular.py
tests/units/descriptors/: test_attributes.py  test_dataspec.py  test_datatypes.py  test_descriptors.py  test_interface.py
tests/units/meta/: test_meta.py
tests/units/utilities/: test_dataclasses.py  test_functions.py
